[package]
name = "kwfe"
version = "0.1.0"
edition = "2018"
authors = ["nk"]
license="MIT"
description = "Kubernetes workflow engine"
repository = "https://github.com/n-k/kwfe"

[dependencies]
tokio = { version = "~1.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "~0.52", default-features = true, features = ["derive"] }
kube-derive = "~0.52"
kube-runtime = "~0.52"
k8s-openapi = { version = "~0.11", default-features = false, features = ["v1_17"] }
futures = "~0.3"
serde = "~1.0"
serde_json = "~1.0"
serde_yaml = "~0.8"
schemars = "~0.8"
thiserror = "~1.0"
